TEST_CASES = cxx.lm 

INPUT = \
	cxx01.cpp.in \
	cxx02.cpp.in \
	cxx03.cpp.in \
	cxx04.cpp.in \
	cxx05.cpp.in \
	cxx06.cpp.in \
	cxx07.cpp.in \
	cxx08.cpp.in \
	cxx09.cpp.in \
	cxx10.cpp.in \
	cxx11.cpp.in \
	cxx12.cpp.in \
	cxx13.cpp.in

OUTPUT = \
	cxx01.cpp.exp \
	cxx02.cpp.exp \
	cxx03.cpp.exp \
	cxx04.cpp.exp \
	cxx05.cpp.exp \
	cxx06.cpp.exp \
	cxx07.cpp.exp \
	cxx08.cpp.exp \
	cxx09.cpp.exp \
	cxx10.cpp.exp \
	cxx11.cpp.exp \
	cxx12.cpp.exp \
	cxx13.cpp.exp

EXTRA_DIST = TESTS runtests.mk $(TEST_CASES) $(INPUT) $(OUTPUT)
